# django-datetime-utc

./: README.rst  pyproject.toml
datetimeutc/: Changelog.md  __init__.py  fields.py
tests/: settings.py
tests/testapp/: models.py  test_model.py
tests/testapp/migrations/: 0002_add_time_range.py
